Fixed alignment of --contact and put opacity on --copyright

--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,22 +1,24 @@
 .footer {
   max-height: 600px;
-  margin-top: 50px;
+  margin-top: 10px;
   color: #fff;
   background-color: #404749;
 
   &--container {
     display: flex;
-
     width: 100%;
   }
 
   &--open {
     margin: auto;
+    margin-top: 10px;
     text-align: center;
   }
 
   &--contact {
     margin: auto;
+    margin-top: 10px;
+    text-align: center;
   }
 
   &--line {
@@ -26,5 +28,6 @@
   &--copyright {
     padding-bottom: 2rem;
     margin: auto;
+    opacity: 0.7;
   }
 }
